service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-php-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
