ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-php-app-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: my-php-app-service
          servicePort: 80
